--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
 
     dependencies {
         classpath 'com.bmuschko:gradle-docker-plugin:3.0.5'
+        classpath 'org.ajoberstar:gradle-git:1.3.2'
     }
 }
 
@@ -25,14 +26,20 @@ repositories {
     }
 }
 
-def playVersion = '2.5.10'
-def scalaVersion = '2.11'
-
-version = '1.0-SNAPSHOT'
+import org.ajoberstar.grgit.Grgit
 
 import com.bmuschko.gradle.docker.tasks.image.Dockerfile
 import com.bmuschko.gradle.docker.tasks.image.DockerBuildImage
 import com.bmuschko.gradle.docker.tasks.image.DockerPullImage
+
+def repo = Grgit.open(project.file('.'))
+def describe = repo.describe()
+
+if(describe && describe.startsWith('v')) {
+    version = describe.substring(1)
+} else {
+    version = 'unversioned'
+}
 
 apply plugin: 'com.bmuschko.docker-remote-api'
 
@@ -50,6 +57,9 @@ docker {
         certPath = project.file "$env.DOCKER_CERT_PATH"
     }
 }
+
+def playVersion = '2.5.10'
+def scalaVersion = '2.11'
 
 model {
     components {
